# controller/phoneController.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"net/http"
+	"strings"
 	"time"
 
 	"FP-Sanbercode-Go-47-HaritsArkaanPutranto/models"
@@ -14,7 +15,7 @@ type PhoneInput struct {
 	BrandID  uint   `json:"brand_id"`
 	ColorID  uint   `json:"color_id"`
 	ModelID  uint   `json:"model_id"`
-	ReviewID uint   `json:review_id`
+	ReviewID uint   `json:"review_id"`
 	Price    string `json:"price"`
 	Storage  uint   `json:"storage"`
 }
@@ -24,13 +25,105 @@ type PhoneInput struct {
 // @Description Get a list of Phone.
 // @Tags Phone
 // @Produce json
+// @Param price query string false "price filter (case insensitive search)"
+// @Param sortByprice query string false "Sort by price (asc or desc)"
+// @Param sortByBrandID query string false "Sort by BrandID (asc or desc)"
+// @Param sortByColorID query string false "Sort by ColorID (asc or desc)"
+// @Param sortByModelD query string false "Sort by ModelD (asc or desc)"
+// @Param sortByReviewID query string false "Sort by ReviewID (asc or desc)"
+// @Param sortByCreatedAt query string false "Sort by created_at (asc or desc)"
 // @Success 200 {object} []models.Phone
 // @Router /phones [get]
 func GetAllPhone(c *gin.Context) {
 	// get db from gin context
 	db := c.MustGet("db").(*gorm.DB)
+
+	price := c.Query("price")
+	sortByPrice := c.Query("sortByPrice")
+	sortByBrandID := c.Query("sortByBrandID")
+	sortByColorID := c.Query("sortByColorID")
+	sortByModelD := c.Query("sortByModelD")
+	sortByReviewID := c.Query("sortByReviewID")
+	sortByCreatedAt := c.Query("sortByCreatedAt")
+
 	var names []models.Phone
-	db.Find(&names)
+
+	query := db
+
+	if price != "" {
+		query = query.Where("LOWER(price) LIKE ?", "%"+strings.ToLower(price)+"%")
+	}
+
+	if sortByPrice != "" {
+		if strings.ToLower(sortByPrice) == "asc" {
+			query = query.Order("price asc")
+		} else if strings.ToLower(sortByPrice) == "desc" {
+			query = query.Order("price desc")
+		} else {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid sortByTitle parameter"})
+			return
+		}
+	}
+
+	if sortByBrandID != "" {
+		if strings.ToLower(sortByBrandID) == "asc" {
+			query = query.Order("brand_id asc")
+		} else if strings.ToLower(sortByBrandID) == "desc" {
+			query = query.Order("brand_id desc")
+		} else {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid sortByRatingID parameter"})
+			return
+		}
+	}
+
+	if sortByColorID != "" {
+		if strings.ToLower(sortByColorID) == "asc" {
+			query = query.Order("color_id asc")
+		} else if strings.ToLower(sortByColorID) == "desc" {
+			query = query.Order("color_id desc")
+		} else {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid sortByRatingID parameter"})
+			return
+		}
+	}
+
+	if sortByModelD != "" {
+		if strings.ToLower(sortByModelD) == "asc" {
+			query = query.Order("model_id asc")
+		} else if strings.ToLower(sortByModelD) == "desc" {
+			query = query.Order("model_id desc")
+		} else {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid sortByRatingID parameter"})
+			return
+		}
+	}
+
+	if sortByReviewID != "" {
+		if strings.ToLower(sortByReviewID) == "asc" {
+			query = query.Order("review_id asc")
+		} else if strings.ToLower(sortByReviewID) == "desc" {
+			query = query.Order("review_id desc")
+		} else {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid sortByRatingID parameter"})
+			return
+		}
+	}
+
+	if sortByCreatedAt != "" {
+		if strings.ToLower(sortByCreatedAt) == "asc" {
+			query = query.Order("created_at asc")
+		} else if strings.ToLower(sortByCreatedAt) == "desc" {
+			query = query.Order("created_at desc")
+		} else {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid sortByCreatedAt parameter"})
+			return
+		}
+	}
+
+	if err := query.Find(&names).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Data not found"})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": names})
 }
