# controller/reviewController.go
@@ -1,0 +1,171 @@
+package controller
+
+import (
+	"net/http"
+	"strings"
+	"time"
+
+	"FP-Sanbercode-Go-47-HaritsArkaanPutranto/models"
+
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+)
+
+type ReviewInput struct {
+	Text   string `json:"text"`
+	UserID uint   `json:"user_id"`
+}
+
+// GetAllReview godoc
+// @Summary Get all Review.
+// @Description Get a list of Review.
+// @Tags Review
+// @Produce json
+// @Param sortByCreatedAt query string false "Sort by created_at (asc or desc)"
+// @Success 200 {object} []models.Review
+// @Router /reviews [get]
+func GetAllReview(c *gin.Context) {
+	// get db from gin context
+	db := c.MustGet("db").(*gorm.DB)
+
+	sortByCreatedAt := c.Query("sortByCreatedAt")
+
+	var names []models.Review
+
+	query := db
+
+	if sortByCreatedAt != "" {
+		if strings.ToLower(sortByCreatedAt) == "asc" {
+			query = query.Order("created_at asc")
+		} else if strings.ToLower(sortByCreatedAt) == "desc" {
+			query = query.Order("created_at desc")
+		} else {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid sortByCreatedAt parameter"})
+			return
+		}
+	}
+
+	if err := query.Find(&names).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Data not found"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"data": names})
+}
+
+// CreateReview godoc
+// @Summary Create New Review.
+// @Description Creating a new Review.
+// @Tags Review
+// @Param Body body ReviewInput true "the body to create a new Review"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Produce json
+// @Success 200 {object} models.Review
+// @Router /reviews [post]
+func CreateReview(c *gin.Context) {
+	// Validate input
+	var input ReviewInput
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Get the user's role from the token
+	userRole := c.GetString("user_role")
+
+	// Check if the user's role is either "admin" or "writer"
+	if userRole != "admin" && userRole != "writer" {
+		c.JSON(http.StatusForbidden, gin.H{"error": "Only admin or writer can create reviews."})
+		return
+	}
+
+	// Create Review
+	review := models.Review{Text: input.Text, UserID: input.UserID}
+	db := c.MustGet("db").(*gorm.DB)
+	db.Create(&review)
+
+	c.JSON(http.StatusOK, gin.H{"data": review})
+}
+
+// GetReviewById godoc
+// @Summary Get Review.
+// @Description Get an Review by id.
+// @Tags Review
+// @Produce json
+// @Param id path string true "Review id"
+// @Success 200 {object} models.Review
+// @Router /reviews/{id} [get]
+func GetReviewById(c *gin.Context) { // Get model if exist
+	var name models.Review
+
+	db := c.MustGet("db").(*gorm.DB)
+	if err := db.Where("id = ?", c.Param("id")).First(&name).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"data": name})
+}
+
+// UpdateReview godoc
+// @Summary Update Review.
+// @Description Update Review by id.
+// @Tags Review
+// @Produce json
+// @Param id path string true "Review id"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Param Body body ReviewInput true "the body to update age rating category"
+// @Success 200 {object} models.Review
+// @Router /reviews/{id} [patch]
+func UpdateReview(c *gin.Context) {
+
+	db := c.MustGet("db").(*gorm.DB)
+	// Get model if exist
+	var review models.Review
+	if err := db.Where("id = ?", c.Param("id")).First(&review).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		return
+	}
+
+	// Validate input
+	var input ReviewInput
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	var updatedInput models.Review
+	updatedInput.Text = input.Text
+	updatedInput.UserID = input.UserID
+	updatedInput.UpdatedAt = time.Now()
+
+	db.Model(&review).Updates(updatedInput)
+
+	c.JSON(http.StatusOK, gin.H{"data": review})
+}
+
+// DeleteReview godoc
+// @Summary Delete one Review.
+// @Description Delete a Review by id.
+// @Tags Review
+// @Produce json
+// @Param id path string true "Review id"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Success 200 {object} map[string]boolean
+// @Router /reviews/{id} [delete]
+func DeleteReview(c *gin.Context) {
+	// Get model if exist
+	db := c.MustGet("db").(*gorm.DB)
+	var review models.Review
+	if err := db.Where("id = ?", c.Param("id")).First(&review).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		return
+	}
+
+	db.Delete(&review)
+
+	c.JSON(http.StatusOK, gin.H{"data": true})
+}
