# models/rating.go
@@ -5,10 +5,10 @@ import (
 )
 
 type (
-	// Review
-	Review struct {
+	// Rating
+	Rating struct {
 		ID        uint      `gorm:"primary_key" json:"id"`
-		Text      string    `json:"text"`
+		Rating    uint      `json:"rating"`
 		UserID    uint      `json:"user_id"`
 		CreatedAt time.Time `json:"created_at"`
 		UpdatedAt time.Time `json:"updated_at"`
